# GalleryDLSubBot

./: .gitignore  README.md  link_fixes.yaml  pyproject.toml  run.py
gallery_dl_sub_bot/: auth_manager.py  bot.py  config.py  date_format.py  gallery_dl_manager.py  hidden_data.py  image_conversion.py  link_fixer.py  run_cmd.py  subscription.py  subscription_manager.py
