[tool.poetry]
name = "gallery-dl-sub-bot"
version = "0.1.0"
description = "A telegram bot to subscribe to (and archive) galleries using gallery-dl"
authors = ["Deer-Spangle <deer@spangle.org.uk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gallery_dl_sub_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
telethon = "^1.35.0"
pyyaml = "^6.0.1"
aioshutil = "^1.3"
aiostream = "^0.6.1"
jinja2 = "^3.1.4"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
